tests/snapshots/parser_snapshots__parser_all@ast-14.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/language/14_iterators.of
---
Err(
    "unexpected token 'self'",
)
