tests/snapshots/parser_snapshots__parser_all@ast-141.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/validator/p2_type_alias_inlined_in_signature.of
---
Ok(
    Program {
        items: [
            Item {
                kind: TypeAlias(
                    TypeAliasDecl {
                        name: "MyInt",
                        generics: [],
                        ty: Primitive(
                            Int64,
                        ),
                    },
                ),
                span: Span {
                    line: 1,
                    col: 5,
                    len: 4,
                },
            },
            Item {
                kind: Function(
                    FunctionDecl {
                        name: "foo",
                        has_self_param: false,
                        is_extern: false,
                        generics: [],
                        return_type: Some(
                            Named(
                                "MyInt",
                                [],
                            ),
                        ),
                        params: [],
                        body: Some(
                            Block {
                                statements: [],
                                returns: None,
                            },
                        ),
                        span: Span {
                            line: 2,
                            col: 9,
                            len: 8,
                        },
                    },
                ),
                span: Span {
                    line: 2,
                    col: 9,
                    len: 8,
                },
            },
        ],
    },
)
