tests/snapshots/parser_snapshots__parser_all@ast-144.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/validator/p3_extend_on_interface_errors.of
---
Ok(
    Program {
        items: [
            Item {
                kind: Interface(
                    InterfaceDecl {
                        name: "I",
                        generics: [],
                        fields: [],
                        methods: [],
                        implements: [],
                    },
                ),
                span: Span {
                    line: 1,
                    col: 10,
                    len: 9,
                },
            },
            Item {
                kind: Extend(
                    ExtendDecl {
                        target: Named(
                            "I",
                            [],
                        ),
                        generic_params: [],
                        implements: [],
                        methods: [
                            FunctionDecl {
                                name: "f",
                                has_self_param: false,
                                is_extern: false,
                                generics: [],
                                return_type: None,
                                params: [],
                                body: Some(
                                    Block {
                                        statements: [],
                                        returns: None,
                                    },
                                ),
                                span: Span {
                                    line: 2,
                                    col: 20,
                                    len: 8,
                                },
                            },
                        ],
                    },
                ),
                span: Span {
                    line: 2,
                    col: 7,
                    len: 6,
                },
            },
        ],
    },
)
