tests/snapshots/parser_snapshots__parser_all@ast-145.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/validator/p3_universal_extend_records_typeparam_args.of
---
Ok(
    Program {
        items: [
            Item {
                kind: Struct(
                    StructDecl {
                        name: "Box",
                        is_extern: false,
                        generics: [
                            GenericParam {
                                name: "T",
                                bounds: [],
                            },
                        ],
                        fields: [],
                        methods: [],
                        implements: [],
                    },
                ),
                span: Span {
                    line: 1,
                    col: 7,
                    len: 6,
                },
            },
            Item {
                kind: Extend(
                    ExtendDecl {
                        target: Named(
                            "Box",
                            [
                                Named(
                                    "U",
                                    [],
                                ),
                            ],
                        ),
                        generic_params: [],
                        implements: [],
                        methods: [
                            FunctionDecl {
                                name: "peek",
                                has_self_param: false,
                                is_extern: false,
                                generics: [],
                                return_type: None,
                                params: [],
                                body: Some(
                                    Block {
                                        statements: [],
                                        returns: None,
                                    },
                                ),
                                span: Span {
                                    line: 2,
                                    col: 25,
                                    len: 8,
                                },
                            },
                        ],
                    },
                ),
                span: Span {
                    line: 2,
                    col: 7,
                    len: 6,
                },
            },
        ],
    },
)
