tests/snapshots/parser_snapshots__parser_all@ast-149.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/validator/p5_as_cast_changes_type.of
---
Ok(
    Program {
        items: [
            Item {
                kind: Function(
                    FunctionDecl {
                        name: "test",
                        has_self_param: false,
                        is_extern: false,
                        generics: [],
                        return_type: None,
                        params: [],
                        body: Some(
                            Block {
                                statements: [
                                    Expr(
                                        BinaryOp(
                                            As(
                                                Literal(
                                                    Int(
                                                        "5",
                                                    ),
                                                ),
                                                Primitive(
                                                    Float64,
                                                ),
                                            ),
                                            Add,
                                            Literal(
                                                Float(
                                                    "2.0",
                                                ),
                                            ),
                                        ),
                                    ),
                                ],
                                returns: None,
                            },
                        ),
                        span: Span {
                            line: 1,
                            col: 9,
                            len: 8,
                        },
                    },
                ),
                span: Span {
                    line: 1,
                    col: 9,
                    len: 8,
                },
            },
        ],
    },
)
