tests/snapshots/parser_snapshots__parser_all@ast-15.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/language/15_ffi_pinning.of
---
Err(
    "unexpected token ','",
)
